objects/WebToObject__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BckColor__c</fullName>
        <label>BckColor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BckUrl__c</fullName>
        <label>BckUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BtnColor__c</fullName>
        <label>BtnColor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FormBckColor__c</fullName>
        <label>FormBckColor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HeadColor__c</fullName>
        <label>HeadColor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HoverBtnColor__c</fullName>
        <label>HoverBtnColor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LabelColor__c</fullName>
        <label>LabelColor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LogoUrl__c</fullName>
        <label>LogoUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OrgId__c</fullName>
        <label>OrgId</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RecordTypeId__c</fullName>
        <label>RecordTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Form</label><nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>WebToObject Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Forms Fast</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>